<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.cucumber</groupId>
  <artifactId>CrossBrowserParallelTesting</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>CrossBrowserParallelTesting</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  
  <build>
 
    <plugins>        
     <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.6.1</version>
         <configuration>
			<fork>true</fork>
			<source>1.8</source>
			<target>1.8</target>
         </configuration>
     </plugin>
     <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.19.1</version>
        <configuration>
	        <parallel>classes</parallel>
	        <forkMode>perthread</forkMode>
	        <threadCount>3</threadCount>
	        <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
	        <includes>
	        	<include>ChromeRunner.java</include>
	        	<include>ExplorerRunner.java</include>
	        	<include>FirefoxRunner.java</include>
	        </includes>
        </configuration>
     </plugin>
     <plugin>
		<artifactId>maven-project-info-reports-plugin</artifactId>
		<version>2.7</version>
    </plugin>
    </plugins>
 
  </build>

  <dependencies>
  	<dependency>
        <groupId>org.seleniumhq.selenium</groupId>
    	<artifactId>selenium-java</artifactId>
    	<version>3.4.0</version>
    </dependency>
    <dependency>
    	<groupId>junit</groupId>
    	<artifactId>junit</artifactId>
    	<version>4.12</version>
    	<scope>test</scope>
    </dependency>
    <dependency>
        <groupId>org.testng</groupId>
        <artifactId>testng</artifactId>
        <version>6.10</version>
    </dependency>
    <dependency>
        <groupId>info.cukes</groupId>
        <artifactId>cucumber-testng</artifactId>
        <version>1.2.5</version>
    </dependency>
    <dependency>
 		<groupId>info.cukes</groupId>
 		<artifactId>cucumber-java</artifactId>
 		<version>1.2.5</version>
 		<scope>test</scope>
  	</dependency>
  	<dependency>
  		<groupId>info.cukes</groupId>
  		<artifactId>cucumber-picocontainer</artifactId>
  		<version>1.2.5</version>
  		<scope>test</scope>
  	</dependency>
  	<dependency>
  		<groupId>info.cukes</groupId>
  		<artifactId>cucumber-junit</artifactId>
  		<version>1.2.5</version>
  		<scope>test</scope>
  	</dependency>
  	<dependency>
		<groupId>com.aventstack</groupId>
		<artifactId>extentreports</artifactId>
		<version>3.0.5</version>
	</dependency>
	<dependency>
		<groupId>com.vimalselvam</groupId>
		<artifactId>cucumber-extentsreport</artifactId>
		<version>2.0.4</version>
	</dependency>
  </dependencies>
  
</project>